# eadrc_longitudinal_controller

./: CMakeLists.txt  README.md  package.xml
include/eadrc_longitudinal_controller/: ESO.hpp  debug_values.hpp  eadrc.hpp  eadrc_longitudinal_controller.hpp  eadrc_longitudinal_controller_node.hpp  longitudinal_controller_utils.hpp  lowpass_filter.hpp  smooth_stop.hpp  visibility_control.hpp
launch/: eadrc_longitudinal_controller.launch.py
src/: ESO.cpp  eadrc.cpp  eadrc_longitudinal_controller.cpp  eadrc_longitudinal_controller_node.cpp  longitudinal_controller_utils.cpp  smooth_stop.cpp
test/: test_eadrc_longitudinal_controller.cpp
